conexion establecida con el backend y creacion de login beta

--- a/Idiomatic/package.json
+++ b/Idiomatic/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -19,6 +18,7 @@
     "@mui/x-charts": "^7.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
@@ -31,6 +31,4 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.0"
   }
-
-  
 }
