--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.0",
+    "lamejs": "^1.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2"
