--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,7 +20,8 @@
     "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.2"
+    "mysql2": "^3.10.2",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
