--- a/Idiomatic/package.json
+++ b/Idiomatic/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jsdom": "^25.0.1",
     "vite": "^5.2.0",
     "vitest": "^2.1.2"
   }
