--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
     "chart.js": "^4.4.6",
+    "js-cookie": "^3.0.5",
     "nodemailer": "^6.9.15",
     "react-chartjs-2": "^5.2.0",
     "react-google-recaptcha": "^3.1.0"
