inicio de testeo con cypress

--- a/Idiomatic/.gitignore
+++ b/Idiomatic/.gitignore
@@ -11,9 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
+cypress
 
 # Editor directories and files
 .vscode/*
+
 !.vscode/extensions.json
 .idea
 .DS_Store
