--- a/Idiomatic/package.json
+++ b/Idiomatic/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "cy:open":"cypress open"
   },
   "homepage": "./",
   "dependencies": {
@@ -37,12 +38,14 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^3.0.3",
+    "cypress": "^14.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^25.0.1",
     "vite": "^5.2.0",
-    "vitest": "^2.1.2"
+    "vitest": "^3.0.3"
   }
 }
